<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:key="main_screen">
        <PreferenceCategory
            app:key="user_category"
            app:title="Личные данные">
            <Preference
                app:dialogTitle="Ваше имя"
                app:dialogMessage="Введите ваше полное имя"
                app:key="NAME"
                app:title="@string/name"
                app:summary="Фамилия Имя">
            </Preference>
            <Preference
                app:dialogTitle="Ваш телефон"
                app:dialogMessage="Введите ваш телефон"
                app:key="PHONE"
                app:title="@string/phone"
                app:summary="88005553535">
            </Preference>
            <Preference
                app:key="LOCATION"
                app:title="@string/location">
            </Preference>
            <Preference
                app:dialogTitle="Адрес"
                app:key="INF"
                app:title="@string/address"
                app:summary="Улица Пошкина дом Колотушкина">
            </Preference>
        </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/account">
        <Preference
            app:key="CATEGORY"
            app:title="@string/type_user"
            app:summary="VETERAN">
        </Preference>
    </PreferenceCategory>

    <!--    <PreferenceCategory-->
<!--        app:title="Уведомления">-->
<!--        <SwitchPreference-->
<!--            app:title="Отправка уведомлений"-->
<!--            android:key="NOTIFICATION">-->
<!--        </SwitchPreference>-->
<!--    </PreferenceCategory>-->
</PreferenceScreen>