<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_types_fragment">

    <fragment
        android:id="@+id/navigation_types_fragment"
        android:name="com.arbonik.helper.admin.TypesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_types_admin" />

    <fragment
        android:id="@+id/navigation_map_admin"
        android:name="com.arbonik.helper.Map.MapsFragment"
        android:label="@string/map_admin"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_statistics_admin"
        android:name="com.arbonik.helper.admin.StatisicsFragment_admin"
        android:label="@string/title_requestion"
        tools:layout="@layout/fragment_reqests" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.arbonik.helper.ui.settings.SettingsFragment"
        android:label="@string/title_notifications" />
</navigation>