<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/statistic_layout"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".admin.StatisicsFragment_admin"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/layoutForUsersStatistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/graph"/>



            <CheckBox
                android:id="@+id/all_users"
                android:text="@string/all_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/veterans"
                android:text="@string/veterans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:text="@string/volonteers"
                android:id="@+id/volonteers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <!--            <CheckBox-->
        <!--                android:id="@+id/requests"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"/>-->


        <TextView
            android:textSize="20dp"
            android:text="Не выбрано"
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <Button
            android:id="@+id/bb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/layoutForRequestsStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

            <CheckBox
                android:id="@+id/all_requests"
                android:text="@string/all_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/refused_requests"
                android:text="@string/refused_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/complited_requests"
                android:text="@string/complited_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>