<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.arbonik.helper.ui.veteran.VeteranRequestFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_create_request" />

    <fragment
        android:id="@+id/navigation_request"
        android:name="com.arbonik.helper.ui.requestFragments.RequestFragment"
        android:label="@string/title_requestion"
        tools:layout="@layout/fragment_reqests" >
        <action
            android:id="@+id/action_navigation_request_to_mapVeteranFragment2"
            app:destination="@id/mapVeteranFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.arbonik.helper.ui.settings.SettingsFragment"
        android:label="@string/title_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_map_veteran_fragment2"
            app:destination="@id/mapVeteranFragment2" />
    </fragment>
    <fragment
        android:id="@+id/mapVeteranFragment2"
        android:name="com.arbonik.helper.map.MapVeteranFragment"
        android:label="MapVeteranFragment" >
    </fragment>
</navigation>