<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="4sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="8sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_type_layout_users_admin"
            style="@style/Layout_user_admin_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/hint_user_type_users_admin"
                style="@style/Hint_item"
                android:text="@string/_type_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_user_type_users_admin"
                style="@style/Text_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hint_user_type_users_admin"
                app:layout_constraintTop_toTopOf="@+id/hint_user_type_users_admin"
                tools:text="@string/veteran" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name_layout_users_admin"
            style="@style/Layout_user_admin_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_type_layout_users_admin">

            <TextView
                android:id="@+id/hint_name_users_admin"
                style="@style/Hint_item"
                android:text="@string/_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_name_users_admin"
                style="@style/Text_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hint_name_users_admin"
                app:layout_constraintTop_toTopOf="@+id/hint_name_users_admin"
                tools:text="Фролова Ольга Николаевна" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phone_layout_users_admin"
            style="@style/Layout_user_admin_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_layout_users_admin">

            <TextView
                android:id="@+id/hint_phone_users_admin"
                style="@style/Hint_item"
                android:text="@string/_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_phone_users_admin"
                style="@style/Text_item"
                app:layout_constraintEnd_toStartOf="@+id/button_copy_phone_user_admin"
                app:layout_constraintStart_toEndOf="@+id/hint_phone_users_admin"
                app:layout_constraintTop_toTopOf="@+id/hint_phone_users_admin"
                tools:text="+7 (333) 555-55-55" />

            <ImageButton
                android:id="@+id/button_copy_phone_user_admin"
                style="@style/Button_copy"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inf_layout_users_admin"
            style="@style/Layout_user_admin_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_layout_users_admin">

            <TextView
                android:id="@+id/hint_inf_users_admin"
                style="@style/Hint_item"
                android:text="@string/_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_inf_users_admin"
                style="@style/Text_item"
                app:layout_constraintEnd_toStartOf="@+id/button_location_user_admin"
                app:layout_constraintStart_toEndOf="@+id/hint_inf_users_admin"
                app:layout_constraintTop_toTopOf="@+id/hint_inf_users_admin"
                tools:text="Ул. Пушкина 20/14, 2 подъезд, 6 этаж" />

            <ImageButton
                android:id="@+id/button_location_user_admin"
                style="@style/Button_location_mini"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/uid_layout_users_admin"-->
<!--            style="@style/Layout_user_admin_item"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/inf_layout_users_admin">-->

<!--            <TextView-->
<!--                android:id="@+id/hint_uid_users_admin"-->
<!--                style="@style/Hint_user_admin_item"-->
<!--                android:text="@string/uid"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <TextView-->
<!--                android:id="@+id/text_uid_users_admin"-->
<!--                style="@style/Text_user_admin_item"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/button_copy_uid_user_admin"-->
<!--                app:layout_constraintStart_toEndOf="@+id/hint_uid_users_admin"-->
<!--                app:layout_constraintTop_toTopOf="@+id/hint_uid_users_admin"-->
<!--                tools:text="HRREgvQRGvVdJucJkEJAPUzJqgi4" />-->

<!--            <ImageButton-->
<!--                android:id="@+id/button_copy_uid_user_admin"-->
<!--                style="@style/Button_copy"-->
<!--                app:layout_constraintDimensionRatio="1:1"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->


        <LinearLayout
            style="@style/Layout_user_admin_item"
            android:layout_marginTop="4sp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inf_layout_users_admin">

            <Button
                android:id="@+id/button_activate_admin_item"
                style="@style/Button_action_admin"
                android:text="@string/activate_short"/>
            <Button
                android:id="@+id/button_lock_admin_item"
                style="@style/Button_action_admin"
                android:text="@string/lock_short"/>
            <Button
                android:id="@+id/button_unlock_admin_item"
                style="@style/Button_action_admin"
                android:text="@string/unlock_short"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>